--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,22 @@ services:
             - ./app:/app
         command: >
             sh -c "python manage.py runserver 0.0.0.0:8000"
+        environment:
+            - DB_HOST=db
+            - DB_NAME=appfotojalan
+            - DB_USER=username
+            - DB_PASS=password
+        depends_on:
+            - db
+
+    db:
+        image: postgres:16.2-alpine3.19
+        volumes:
+            - dev-db-data:/var/lib/postgresql/data
+        environment:
+            - POSTGRES_DB=appfotojalan
+            - POSTGRES_USER=username
+            - POSTGRES_PASSWORD=password
+
+volumes:
+    dev-db-data:
